--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<h1> Hello from DAG By JENKINS-Triggered from GitHub-Webhook </h1>
+<h1> Hello from DAG By JENKINS-GitHub-Webhook </h1>
 </body>
 </html>
